--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,19 @@ body {
 .nav-links li {
   margin: 16px;
 }
+
+/*Transition Group Animation */
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
