--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,3 +99,13 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+/* search filter */
+
+.filter-container {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
