--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,11 +37,23 @@ body {
   font-weight: bold;
   margin-right: 24px;
   color: var(--background-light);
+  margin: 0;
+}
+
+.main-title {
+  margin: 0;
+}
+
+.nav-links li h1 {
+  display: flex;
+  align-items: center;
 }
 
 .nav-links li {
   margin: 16px;
   color: var(--background-light);
+  display: flex;
+  align-items: center;
 }
 
 .nav-links li a {
