--- a/client/src/App.css
+++ b/client/src/App.css
@@ -116,8 +116,7 @@ body {
 
 .filter-container {
   background-color: #fff;
-  padding: 10px;
   border-radius: 0.5rem;
-  padding: 0.5rem;
   margin: 0.5rem;
+  padding: 1px 0px 15px 20px;
 }
