--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,19 +25,18 @@ body {
   width: 100%;
   justify-content: space-between;
   background-color: var(--secondary-color);
-  padding-left: 24px;
+  padding-left: 1em;
 }
 
 .main-logo {
-  height: 40px;
-  margin-right: 10px;
+  height: 1.2em;
+  margin-right: 0.25em;
 }
 
 .nav-links {
   display: flex;
   list-style: none;
   font-weight: bold;
-  margin-right: 24px;
   color: var(--background-light);
   margin: 0;
 }
@@ -52,7 +51,7 @@ body {
 }
 
 .nav-links li {
-  margin: 16px;
+  margin: 1em;
   color: var(--background-light);
   display: flex;
   align-items: center;
@@ -104,33 +103,26 @@ body {
   border-radius: 0.5rem;
   margin: 0 auto;
   width: 50%;
-  margin-top: 30px;
+  margin-top: 1.5em;
   background-color: #fff;
-  min-width: 275px;
+  min-width: 17rem;
+  padding-bottom: 1em;
+  height: fit-content;
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
 }
-
-/* search filter */
-
-.filter-container {
-  background-color: #fff;
-  border-radius: 0.5rem;
-  margin: 0.5rem;
-  padding: 1px 0px 15px 20px;
-}
-
 /*alerts*/
 
 .alert {
-  padding: 0.7rem;
-  margin: 1rem 0;
+  padding: 0.7em;
+  margin: 1em;
   opacity: 0.9;
   background: var(--light-color);
   color: #333;
+  border-radius: 0.5em;
 }
 
 .alert-primary {
@@ -162,4 +154,83 @@ body {
   background: #fff;
   color: #333;
   border: #ccc solid 1px;
+}
+
+/*User Page */
+
+.user-title {
+  font-size: 8vmin;
+}
+
+.user-stat {
+  font-size: 3vmin;
+}
+
+/*Library Page*/
+
+.library-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-slider {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+}
+
+.current-record-details-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+.current-control-btn {
+  
+}
+.current-record-details {
+  background-color: white;
+  width: 25%;
+  border-radius: 0.5em;
+  padding: 0.5em 1em;
+}
+
+.record-collection {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  border: 1px solid black;
+  width: 55%;
+  height: 500px;
+}
+
+.record-collection-row {
+  display: flex;
+  border: 1px solid purple;
+  width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.record-box {
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.record {
+  background-color: black;
+  width: 5px;
+}
+
+.record:hover {
+  background-color: red;
+  cursor: pointer;
+}
+.record-highlighted {
+  background-color: red;
 }
