--- a/client/src/components/records/RecordItem.css
+++ b/client/src/components/records/RecordItem.css
@@ -8,9 +8,9 @@
   display: grid;
   grid-template-columns: 50% 50%;
   background-color: #fff;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin: 0.5rem;
+  border-radius: 0.5em;
+  padding: 0.5em;
+  margin: 0.5em;
 }
 .title {
   margin: 0;
