--- a/client/src/components/records/RecordItem.css
+++ b/client/src/components/records/RecordItem.css
@@ -4,6 +4,12 @@
   background-color: rebeccapurple;
 }
 
+.recordItem-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .card {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -11,6 +17,7 @@
   border-radius: 0.5em;
   padding: 0.5em;
   margin: 0.5em;
+  width: 22rem;
 }
 .title {
   margin: 0;
@@ -22,4 +29,12 @@
 
 .record-details-list {
   list-style: none;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
