--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,6 +124,7 @@ body {
   min-width: 17rem;
   padding-bottom: 1em;
   height: fit-content;
+  box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
 .form-group {
@@ -216,21 +217,21 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50% 50%;
-  border: 1px solid black;
+  border: 10px solid d;
   width: 55%;
   height: 500px;
 }
 
 .record-collection-row {
   display: flex;
-  border: 1px solid purple;
   width: 100%;
   grid-column-start: 1;
   grid-column-end: 3;
 }
 
 .record-box {
-  border: 1px solid blue;
+  border: 20px solid transparent;
+  border-image: url(./images/woodborder.jpg) 100 1000;
   display: flex;
   flex-direction: row;
   width: 100%;
