--- a/client/src/components/records/RecordForm.css
+++ b/client/src/components/records/RecordForm.css
@@ -9,3 +9,20 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+.record-form-modal-close-btn {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.record-form-modal-close-btn-icon {
+  padding: 0.5em;
+  cursor: pointer;
+}
+
+.record-form-modal-close-btn-icon:hover {
+  transform: rotateX(180deg);
+
+  transition: 1s;
+}
