--- a/client/src/components/records/RecordItem.css
+++ b/client/src/components/records/RecordItem.css
@@ -18,6 +18,7 @@
   padding: 0.5em;
   margin: 0.5em;
   width: 22rem;
+  box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
 }
 .title {
   margin: 0;
