removed logo from sidebar, fixed barcode input, removed redundant comments, added props for Home private route

--- a/client/src/components/records/RecordItem.css
+++ b/client/src/components/records/RecordItem.css
@@ -30,6 +30,13 @@
 
 .record-details-list {
   list-style: none;
+  padding: 0;
+  line-height: 2em;
+}
+
+.record-image {
+  display: flex;
+  align-items: center;
 }
 
 .button-container {
