added margin-bottom to RecordFilter component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   background-color: var(--background-light);
@@ -120,6 +124,7 @@ body {
   margin: 0 auto;
   width: 50%;
   margin-top: 1.5em;
+  margin-bottom: 1em;
   background-color: #fff;
   min-width: 17rem;
   padding-bottom: 1em;
