--- a/client/src/components/imageSlider/imageslider.css
+++ b/client/src/components/imageSlider/imageslider.css
@@ -1,7 +1,7 @@
 .slider {
   position: relative;
   width: 100%;
-  max-height: 100vw;
+  height: 285px;
   margin: 0;
   padding: 0;
   display: flex;
@@ -18,8 +18,9 @@
 }
 
 .slide {
-  min-width: 100%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   transition: 0.5s;
   overflow: hidden;
 }
