--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -1,21 +1,20 @@
 .modal-wrapper {
   background: #fff;
-  width: 30%;
+  width: 80%;
   max-width: 800px;
-  margin: 4em auto;
+  margin: auto;
   transition: all 0.5s ease;
   border-radius: 0.5em;
-  position: fixed;
-  left: 35%;
-  top: 20%;
+  position: absolute;
+  top: 0;
   transform: translate(-50%, -50%);
-  border: 1px solid #2c2c2c;
+  border: 1px solid black;
   z-index: 1;
 }
 
 .modal-header {
-  background: #2c2c2c;
-  color: #e9e9e9;
+  background: var(--secondary-color);
+  color: var(--light-color);
   padding: 1em;
   display: flex;
   align-items: center;
@@ -30,7 +29,7 @@
 }
 
 .modal-content {
-  padding: 1.5em 1em;
+  padding: 0em 1em;
 }
 
 .modal-body {
@@ -39,15 +38,17 @@
 
 .modal-body h4 {
   font-size: 1.8rem;
-  color: #dd501d;
+  color: var(--secondary-color);
+  text-align: center;
+  margin: 1rem auto;
 }
 
 .modal-body p {
   font-size: 1rem;
   background: #eee;
   color: #333;
-  padding: 1em;
-  margin: 1em 0 2em 0;
+  padding: 1rem;
+  margin: 0.25rem 0 0.25rem 0;
 }
 
 .back-drop {
@@ -56,4 +57,9 @@
   position: fixed;
   transition: all 1.3s;
   width: 100%;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-around;
 }
