--- a/client/src/components/imageSlider/imageslider.css
+++ b/client/src/components/imageSlider/imageslider.css
@@ -1,7 +1,7 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 25vw;
   margin: 0;
   padding: 0;
   display: flex;
@@ -51,6 +51,6 @@
 
 .slider-image {
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
