--- a/client/src/components/pages/library.css
+++ b/client/src/components/pages/library.css
@@ -15,3 +15,71 @@
   display: flex;
   align-content: center;
 }
+
+.library-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-slider {
+  max-width: 25%;
+  max-height: 25%;
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+}
+
+.current-record-details-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+.current-control-btn {
+}
+.current-record-details {
+  background-color: white;
+  width: 25%;
+  border-radius: 0.5em;
+  padding: 0.5em 1em;
+}
+
+.record-collection {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  border-radius: 1em;
+  border: 1px solid transparent;
+  width: 50vw;
+  height: 45vw;
+}
+
+.record-collection-row {
+  display: flex;
+  width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.record-box {
+  border: 20px solid transparent;
+  border-image: url(../../images/woodborder.jpg) 100 1000;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.record {
+  background-color: black;
+  width: 5px;
+}
+
+.record:hover {
+  background-color: red;
+  cursor: pointer;
+}
+.record-highlighted {
+  background-color: red;
+}
