--- a/client/src/components/button/Button.css
+++ b/client/src/components/button/Button.css
@@ -15,9 +15,8 @@
   border-radius: 10px;
   cursor: pointer;
   transition: transform 0.4s ease;
-  margin: 1em;
+  margin: 1rem 0.1rem;
   position: relative;
-  overflow: hidden;
 }
 
 .btn:hover {
@@ -53,6 +52,10 @@
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
 }
+.btn--primary--outline:hover {
+  color: var(--secondary-color);
+}
+
 .btn--warning--outline {
   background-color: transparent;
   color: var(--warning-color);
@@ -88,20 +91,4 @@
 .btn--large {
   padding: 0.6em 1.4em;
   font-size: 2rem;
-}
-
-/*ripples*/
-span.ripple {
-  position: absolute;
-  border-radius: 50%;
-  transform: scale(0);
-  animation: ripple 600ms linear;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-@keyframes ripple {
-  to {
-    transform: scale(4);
-    opacity: 0;
-  }
 }
