--- a/client/src/components/pages/sort.css
+++ b/client/src/components/pages/sort.css
@@ -12,6 +12,7 @@
   border: 1px solid black;
   border-radius: 0.5rem;
   width: 50%;
+  min-width: 17rem;
   box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
   background-color: #fff;
   margin: 1rem 0;
