--- a/client/src/components/imageSlider/imageslider.css
+++ b/client/src/components/imageSlider/imageslider.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  background: black;
+  background: transparent;
 }
 
 .slider i {
@@ -20,9 +20,10 @@
 .slide {
   width: 100%;
   height: 100%;
-  object-fit: contain;
   transition: 0.5s;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .slider-btn {
