--- a/client/src/components/imageSlider/imageslider.css
+++ b/client/src/components/imageSlider/imageslider.css
@@ -1,7 +1,7 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 25vw;
+  /* height: 25vw; */
   margin: 0;
   padding: 0;
   display: flex;
