--- a/client/src/components/pages/library.css
+++ b/client/src/components/pages/library.css
@@ -24,7 +24,7 @@
 
 .image-slider {
   max-width: 25%;
-  max-height: 25%;
+  height: 25vw;
   display: flex;
   justify-content: center;
   margin: 1em;
@@ -49,7 +49,7 @@
 .record-collection {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 50% 50% 50%;
   border-radius: 1em;
   border: 1px solid transparent;
   width: 33.22vw;
