--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,6 +118,42 @@ body {
   flex-direction: column;
 }
 
+.home-controls-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  justify-items: center;
+  align-items: center;
+}
+.filter-container {
+  grid-column: 2/4;
+}
+
+.add-record-button-container {
+  width: 50%;
+  margin: auto;
+  grid-column: 4/5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.5em;
+  padding: 0.5em;
+  margin: 0.5em;
+  box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  border: 1px solid black;
+  margin-top: 1.1em;
+  height: fit-content;
+}
+.add-record-button {
+  margin-top: 0;
+  margin-bottom: 0.1em;
+}
+.add-record-button-description {
+  margin: 0;
+  text-align: center;
+}
+
 /*Transition Group Animation */
 .item-enter {
   opacity: 0;
@@ -145,15 +181,12 @@ body {
   align-items: center;
   border: 1px solid black;
   border-radius: 0.5rem;
-  margin: 0 auto;
-  width: 50%;
-  margin-top: 1.5em;
-  margin-bottom: 1em;
+  width: 22rem;
   background-color: #fff;
-  min-width: 17rem;
   padding-bottom: 1em;
   height: fit-content;
   box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
+  margin: 1.5em auto 1em auto;
 }
 
 .form-group {
