--- a/client/src/components/button/Button.css
+++ b/client/src/components/button/Button.css
@@ -39,7 +39,7 @@
 }
 .btn--danger--solid {
   background-color: var(--danger-color);
-  color: var(--light-color);
+  color: #fff;
   border: none;
 }
 .btn--success--solid {
@@ -72,8 +72,16 @@
   border: 2px solid var(--success-color);
 }
 
-.btn--primary--round {
-  border-radius: 100%;
+.btn--primary--success--circle {
+  border-radius: 50%;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: var(--success-color);
+  border: 2px solid var(--success-color);
+  color: var(--light-color);
 }
 
 /* Button Sizes */
