--- a/client/src/components/records/RecordForm.css
+++ b/client/src/components/records/RecordForm.css
@@ -26,3 +26,23 @@
 
   transition: 1s;
 }
+
+.form-step-slide-container {
+}
+
+.form-step-button {
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+  border: none;
+  margin: 1rem;
+  background-color: var(--background-light);
+  opacity: 0.5;
+}
+
+.form-step-button:hover {
+  opacity: 1;
+}
+.form-step-button:active {
+  background-color: #686a70;
+}
