--- a/client/src/components/hamburger/_sidebar.scss
+++ b/client/src/components/hamburger/_sidebar.scss
@@ -13,8 +13,8 @@
   position: fixed;
   width: 36px;
   height: 30px;
-  right: 36px;
-  top: 32px;
+  right: 22px;
+  top: 22px;
   z-index: 2;
 }
 
@@ -25,6 +25,8 @@
 .bm-cross-button {
   height: 24px;
   width: 24px;
+  margin-top: 18px;
+  margin-right: 18px;
 }
 
 .bm-cross {
